5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4348/executions/1633_2921.log
== TEST (2019-04-02 18:05:53) 
-- CODE:
x1=input("digite o preço do jogo 1")
x2=input("digite o preço do jogo 2")

-- ERROR:
File "XXXX", line 2
    var2 = int(input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:06:19) 
-- CODE:
x=input("digite o preço do jogo 1")
y=input("digite o preço do jogo 2")

-- ERROR:
File "XXXX", line 2
    var2 = int(input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:09:51) 
-- CODE:
x=input("digite o preço do primeiro jogo")
y=input("valor do segundo jogo")
a= y-(y*25/100)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a= y-(y*25/100)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:12:28) 
-- CODE:
jogo_1=input("digite o preço do primeiro jogo")
jogo_2=input("valor do segundo jogo")
total_do_jogo_2=float(jogo_2-(jogo_2*(25/100)))
print(total_do_jogo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_do_jogo_2=float(jogo_2-(jogo_2*(25/100)))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:13:40) 
-- CODE:
jogo_1=input("digite o preço do primeiro jogo")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_do_jogo_2=float(jogo_2-(jogo_2*(25/100)))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:13:51) 
-- CODE:
jogo_1=input()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_do_jogo_2=float(jogo_2-(jogo_2*(25/100)))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:14:54) 
-- CODE:
jogo_1=input()
jogo_2=input()


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_do_jogo_2=float(jogo_2-(jogo_2*(25/100)))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:08) 
-- CODE:
jogo_1=input("digite valor do jogo 1")
jogo_2=input("valor do jogo 2")
a=jogo2 - (jogo_2*25/100)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a=jogo2 - (jogo_2*25/100)
NameError: name 'jogo2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:23) 
-- CODE:
jogo_1=input("digite valor do jogo 1")
jogo_2=input("valor do jogo 2")
a=jogo2 - (jogo_2*25/100)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a=jogo2 - (jogo_2*25/100)
NameError: name 'jogo2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:18) 
-- CODE:
jogo_1=input("digite valor do jogo 1")
jogo_2=input("valor do jogo 2")
a=jogo2 - (jogo_2*25/100)
print(jogo_1)
print(jogo_2)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a=jogo2 - (jogo_2*25/100)
NameError: name 'jogo2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:32) 
-- CODE:
jogo_1=input("digite valor do jogo 1")
jogo_2=input("valor do jogo 2")
a=jogo_2 - (jogo_2*25/100)
print(jogo_1)
print(jogo_2)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a=jogo_2 - (jogo_2*25/100)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:30) 
-- CODE:
jogo_1= int(input("digite valor do jogo 1"))
jogo_2= int(input("valor do jogo 2"))
a=jogo_2 - (jogo_2*25/100)
print(jogo_1)
print(jogo_2)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    jogo_1= int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:59) 
-- CODE:
jogo_1= int(input("digite valor do jogo 1"))
jogo_2=(input("valor do jogo 2"))
a=jogo_2 - (jogo_2*25/100)
print(jogo_1)
print(jogo_2)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    jogo_1= int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:25) 
-- CODE:
jogo_1=float(input("digite valor do jogo 1"))
jogo_2=float(input("valor do jogo 2"))
a=jogo_2 - (jogo_2*25/100)
print(jogo_1)
print(jogo_2)
print(a)
-- OUTPUT:
142.35
89.25
66.9375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:43) 
-- CODE:
jogo_1=float(input("digite valor do jogo 1"))
jogo_2=float(input("valor do jogo 2"))
a=jogo_2 - (jogo_2*25/100)
print(jogo_1)
print(jogo_2)
print(round(a, 2))
-- OUTPUT:
142.35
89.25
66.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:11) 
-- CODE:
jogo_1=int(input("digite valor do jogo 1"))
jogo_2=float(input("valor do jogo 2"))
a=jogo_2 - (jogo_2*25/100)
print(jogo_1)
print(jogo_2)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    jogo_1=int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:29) 
-- CODE:
jogo_1=float(input("digite valor do jogo 1"))
jogo_2=float(input("valor do jogo 2"))
a=jogo_2 - (jogo_2*25/100)
print(jogo_1)
print(jogo_2)
print(a)
-- OUTPUT:
142.35
89.25
66.9375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:39) 
-- CODE:
jogo_1=float(input("digite valor do jogo 1"))
jogo_2=float(input("valor do jogo 2"))
a=jogo_2 - (jogo_2*25/100)
print(jogo_1)
print(jogo_2)
print(a)
-- OUTPUT:
142.35
89.25
66.9375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:02) 
-- CODE:
jogo_1=float(input("digite valor do jogo 1"))
jogo_2=float(input("valor do jogo 2"))
a=25/100
b=jogo_2-(jogo_2*a)
print(jogo_1)
print(jogo_2)
print(b)
-- OUTPUT:
142.35
89.25
66.9375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:53) 
-- CODE:
jogo_1=(input("digite valor do jogo 1"))
jogo_2=(input("valor do jogo 2"))
a=25/100
b=jogo_2-(jogo_2*a)
print(float(jogo_1))
print(float(jogo_2))
print(float(b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    b=jogo_2-(jogo_2*a)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:12) 
-- CODE:
jogo_1=(input("digite valor do jogo 1"))
jogo_2=(input("valor do jogo 2"))
a=25/100
b=jogo_2-(jogo_2*a)
print(float(jogo_1))
print(float(jogo_2))
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    b=jogo_2-(jogo_2*a)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:37) 
-- CODE:
jogo_1=(input("digite valor do jogo 1"))
jogo_2=(input("valor do jogo 2"))
a=25/100
b=jogo_2-(jogo_2*a)
print(float(jogo_1))
print(jogo_2)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    b=jogo_2-(jogo_2*a)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:28:09) 
-- CODE:
jogo_1=float(input("digite valor do jogo 1"))
jogo_2=float(input("valor do jogo 2"))
a=25/100
b=jogo_2-(jogo_2*a)
print(jogo_1)
print(jogo_2)
print(b)
-- OUTPUT:
142.35
89.25
66.9375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:29:29) 
-- CODE:
jogo_1=float(input())
jogo_2=float(input())
a=25/100
b=jogo_2-(jogo_2*a)
print(jogo_1)
print(jogo_2)
print(b)
-- OUTPUT:
142.35
89.25
66.9375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:41) 
-- CODE:
jogo_1=float(input("digite valor do jogo 1"))
jogo_2=float(input("digite valor do jogo 2"))
a=25/100
b=float(jogo_2-(jogo_2*a))
print(jogo_1)
print(jogo_2)
print(b)
-- OUTPUT:
142.35
89.25
66.9375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:31:13) 
-- CODE:
jogo_1=input("digite valor do jogo 1")
jogo_2=input("digite valor do jogo 2")
a=25/100
b=float(jogo_2-(jogo_2*a))
print(jogo_1)
print(jogo_2)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    b=float(jogo_2-(jogo_2*a))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:31:30) 
-- CODE:
jogo_1=input("digite valor do jogo 1")
jogo_2=input("digite valor do jogo 2")
a=25/100
b=jogo_2-(jogo_2*a)
print(jogo_1)
print(jogo_2)
print(b)
-- EXECUTION TIME:
0.177025
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2921/main.py", line 4, in <module>
    b=jogo_2-(jogo_2*a)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
